--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -1,9 +1,9 @@
 {
   "extensionName": {
-    "message": "Fake Filler 2"
+    "message": "BD: Fake Filler"
   },
   "extensionName_short": {
-    "message": "FakeFiller2"
+    "message": "BdFakeFiller"
   },
   "extensionDescription": {
     "message": "A form filler that fills all inputs on a page with fake/dummy data."
@@ -365,6 +365,9 @@
   "customFields_dataType_fullName": {
     "message": "Full Name"
   },
+  "customFields_dataType_streetAddress": {
+    "message": "Street Address"
+  },
   "customFields_dataType_username": {
     "message": "Username"
   },
@@ -391,6 +394,9 @@
   },
   "customFields_dataType_text": {
     "message": "Text"
+  },
+  "customFields_dataType_Country": {
+    "message": "Country"
   },
   "customFields_dataType_alphaNumeric": {
     "message": "Alphanumeric"
@@ -618,4 +624,4 @@
     "message": "Matched a Blocked URL"
   }
 }
-    
+
